CORE-16 - Improve implementation of services

--- a/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
+++ b/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
@@ -42,3 +42,5 @@ role.save.null.argument=Role to be saved must not be null
 module.save.startup.order.null.argument=List of modules to save the startupOrder for must not be null
 module.save.null.argument=Module to be saved must not be null
 module.modulename.null.argument=Modulename must not be null
+
+i18n.save.null.argument=I18n entity to be saved must not be null
