CORE-16 - Improve implementation of services

--- a/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
+++ b/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
@@ -21,8 +21,9 @@
 #
 general.technical.error=Technical service exception occurred
 
-entity.already.exists=User cannot be created because an User with name "{0}" already exist
-entity.not.exist=User with name "{0}" cannot be found. Probably it has been removed
+entity.already.exists=The entity {0} already exists
+entity.not.exist=The entity {0} was not found
+entity.null.argument=Method argument must not be null
 
 user.already.exists=User cannot be created because an User with name "{0}" already exist
 user.not.exist=User with name "{0}" cannot be found. Probably it has been removed
