AJS-24 - Set version of site-plugin to remove warning

--- a/org.openwms.app/org.openwms.client.angularjs.app/pom.xml
+++ b/org.openwms.app/org.openwms.client.angularjs.app/pom.xml
@@ -58,8 +58,7 @@
                     <arguments>
                         <argument>install</argument>
                     </arguments>
-                    <workingDirectory>${basedir}/src/main/ajs
-                    </workingDirectory>
+                    <workingDirectory>${basedir}/src/main/ajs</workingDirectory>
                 </configuration>
             </plugin>
             <plugin>
