--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/.bowerrc
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/.bowerrc
@@ -1,3 +1,8 @@
 {
-    "directory": "bower_components"
+    "directory": "bower_components",
+    "storage": {
+        "packages": ".bower-cache",
+        "registry": ".bower-registry"
+    },
+    "tmp": ".bower-tmp"
 }
