--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
@@ -27,6 +27,8 @@
     "angular-ui-router": "0.2.8-bowratic-tedium",
     "ng-grid": "~2.0.7",
     "ng-file-upload": "~1.2.7",
-    "angular-base64": "~2.0.1"
+    "angular-base64": "~2.0.1",
+    "requirejs": "~2.1.11",
+    "requirejs-domready": "~2.0.1"
   }
 }
