AJS-27 - AJS: (CORE) Introduce dynamic loading of modules at runtime

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
@@ -29,6 +29,7 @@
     "ng-file-upload": "~1.2.7",
     "angular-base64": "~2.0.1",
     "requirejs": "~2.1.11",
-    "requirejs-domready": "~2.0.1"
+    "requirejs-domready": "~2.0.1",
+    "radio": "~0.2.0"
   }
 }
