AJS-27 - AJS: (CORE) Introduce dynamic loading of modules at runtime Fixed Account login

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
@@ -30,6 +30,7 @@
     "angular-base64": "~2.0.1",
     "requirejs": "~2.1.11",
     "requirejs-domready": "~2.0.1",
-    "radio": "~0.2.0"
+    "radio": "~0.2.0",
+    "angular-local-storage": "~0.0.4"
   }
 }
