--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
@@ -34,6 +34,7 @@
     "angular-local-storage": "~0.0.4",
     "velocity": "~0.0.13",
     "angular-translate": "~2.1.0",
-    "angular-translate-loader-partial": "~2.0.0"
+    "angular-translate-loader-partial": "~2.0.0",
+    "angular-xeditable": "~0.1.8"
   }
 }
