--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
@@ -18,7 +18,7 @@
     "angular-sanitize": "~1.2.7",
     "angular-scenario": "~1.2.7",
     "animate.css": "~2.1.0",
-    "bootstrap-sass": "~2.3.1",
+    "bootstrap": "~3.0.3",
     "es5-shim": "~2.0.8",
     "json3": "~3.2.4",
     "underscore.string": "~2.3.3",
