--- a/pom.xml
+++ b/pom.xml
@@ -338,7 +338,7 @@
             </modules>
         </profile>
         <profile>
-            <id>release</id>
+            <id>sordocs</id>
             <build>
                 <plugins>
                     <plugin>
@@ -372,6 +372,13 @@
                             </execution>
                         </executions>
                     </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
