--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
@@ -37,6 +37,7 @@
     "angular-translate-loader-partial": "~2.0.0",
     "angular-xeditable": "~0.1.8",
     "angular-money-directive": "~1.0.1",
-    "blueimp-load-image": "~1.13.0"
+    "blueimp-load-image": "~1.13.0",
+    "pick-a-color": "~1.2.3"
   }
 }
