--- a/org.openwms.app/org.openwms.client.angularjs.app/pom.xml
+++ b/org.openwms.app/org.openwms.client.angularjs.app/pom.xml
@@ -56,7 +56,7 @@
                 <configuration>
                     <executable>bower</executable>
                     <arguments>
-                        <argument>install --force</argument>
+                        <argument>install -f</argument>
                     </arguments>
                     <workingDirectory>${basedir}/src/main/ajs</workingDirectory>
                 </configuration>
