updated javadoc plugin to find the right 3rd party javadocs

--- a/pom.xml
+++ b/pom.xml
@@ -352,6 +352,15 @@
                             </execution>
                         </executions>
                         <configuration>
+                            <links>
+                                <link>http://static.springsource.org/spring/docs/${spring.version}/javadoc-api</link>
+                                <link>http://static.springsource.org/spring-security/site/docs/3.1.x/apidocs</link>
+                                <link>http://commons.apache.org/lang/api-2.5</link>
+                                <link>http://docs.oracle.com/javaee/5/api</link>
+                                <link>http://docs.mockito.googlecode.com/hg/latest</link>
+                                <link>http://dozer.sourceforge.net/apidocs</link>
+                                <link>http://jackson.codehaus.org/${jackson.version}/javadoc</link>
+                            </links>
                             <detectLinks>true</detectLinks>
                             <excludePackageNames>org.openwms.web.flex.servlet</excludePackageNames>
                             <keywords>true</keywords>
