Updated server repo id to use private repos

--- a/org.openwms.app/org.openwms.app.plan/pom.xml
+++ b/org.openwms.app/org.openwms.app.plan/pom.xml
@@ -150,7 +150,7 @@
                             <goal>deploy-file</goal>
                         </goals>
                         <configuration>
-                            <repositoryId>repo.sourceforge.net</repositoryId>
+                            <repositoryId>${distribution.repo.serverId}</repositoryId>
                             <url>
                                 ${distribution.repo.serverProtocol}://${distribution.repo.snapshot.serverUrl.rootPath}
                             </url>
