--- a/org.openwms.app/org.openwms.app.par/pom.xml
+++ b/org.openwms.app/org.openwms.app.par/pom.xml
@@ -35,7 +35,7 @@
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>../../..</moduleDir>
-        <sonar.skippedModules>org.openwms.app.par</sonar.skippedModules>
+        <sonar.skippedModules>org.openwms:org.openwms.app.par</sonar.skippedModules>
     </properties>
     <build>
         <plugins>
