--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/bower.json
@@ -1,43 +1,45 @@
 {
-  "name": "org.openwms.client.angularjs",
-  "version": "1.0.0",
-  "authors": [
-    "Heiko Scherrer <scherrer@openwms.org>"
-  ],
-  "description": "OpenWMS.org UI implemented with AngularJS",
-  "main": "index.html",
-  "license": "LGLP3",
-  "homepage": "www.openwms.org",
-  "dependencies": {
-    "AngularJS-Toaster": "*",
-    "angular": "~1.2.7",
-    "angular-bootstrap": "~0.10.0",
-    "angular-cookies": "~1.2.7",
-    "angular-mocks": "~1.2.7",
-    "angular-resource": "~1.2.7",
-    "angular-sanitize": "~1.2.7",
-    "angular-scenario": "~1.2.7",
-    "animate.css": "~2.1.0",
-    "bootstrap": "~3.0.3",
-    "es5-shim": "~2.0.8",
-    "json3": "~3.2.4",
-    "underscore.string": "~2.3.3",
-    "underscore": "~1.5.2",
-    "ui-bootstrap": "~0.10.0",
-    "angular-ui-router": "0.2.8-bowratic-tedium",
-    "ng-grid": "~2.0.7",
-    "ng-file-upload": "~1.2.7",
-    "angular-base64": "~2.0.1",
-    "requirejs": "~2.1.11",
-    "requirejs-domready": "~2.0.1",
-    "radio": "~0.2.0",
-    "angular-local-storage": "~0.0.4",
-    "velocity": "~0.0.13",
-    "angular-translate": "~2.1.0",
-    "angular-translate-loader-partial": "~2.0.0",
-    "angular-xeditable": "~0.1.8",
-    "angular-money-directive": "~1.0.1",
-    "blueimp-load-image": "~1.13.0",
-    "angular-minicolors": "~0.0.5"
+  "version" : "0.1-SNAPSHOT",
+  "name" : "org.openwms.client.angularjs",
+  "authors" : [ "Heiko Scherrer <scherrer@openwms.org>" ],
+  "description" : "OpenWMS.org UI implemented with AngularJS",
+  "main" : "index.html",
+  "license" : "LGLP3",
+  "homepage" : "www.openwms.org",
+  "dependencies" : {
+    "AngularJS-Toaster" : "*",
+    "angular" : "~1.2.7",
+    "angular-bootstrap" : "~0.10.0",
+    "angular-cookies" : "~1.2.7",
+    "angular-mocks" : "~1.2.7",
+    "angular-resource" : "~1.2.7",
+    "angular-sanitize" : "~1.2.7",
+    "angular-scenario" : "~1.2.7",
+    "animate.css" : "~2.1.0",
+    "bootstrap" : "~3.0.3",
+    "es5-shim" : "~2.0.8",
+    "json3" : "~3.2.4",
+    "underscore.string" : "~2.3.3",
+    "underscore" : "~1.5.2",
+    "ui-bootstrap" : "~0.10.0",
+    "angular-ui-router" : "0.2.8-bowratic-tedium",
+    "ng-grid" : "~2.0.7",
+    "ng-file-upload" : "~1.2.7",
+    "angular-base64" : "~2.0.1",
+    "requirejs" : "~2.1.11",
+    "requirejs-domready" : "~2.0.1",
+    "radio" : "~0.2.0",
+    "angular-local-storage" : "~0.0.4",
+    "velocity" : "~0.0.13",
+    "angular-translate" : "~2.1.0",
+    "angular-translate-loader-partial" : "~2.0.0",
+    "angular-xeditable" : "~0.1.8",
+    "angular-money-directive" : "~1.0.1",
+    "blueimp-load-image" : "~1.13.0",
+    "angular-minicolors" : "~0.0.5"
+  },
+  "resolutions" : {
+    "angular" : ">=1",
+    "angular-translate" : "2.2.0"
   }
 }
