removed some ignores and changed URL to integration database

--- a/org.openwms.core/org.openwms.core.infrastructure.configuration/src/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration/src/org.openwms.core.infrastructure.configuration.properties
@@ -31,7 +31,8 @@
 # JDBC options, used by the DataSource bean
 # ----------------------------------------------------------------
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql:OPENWMS
+#jdbc.url=jdbc:postgresql:OPENWMS
+jdbc.url=jdbc:postgresql://openwms.mooo.com:4001/openwms-cb
 jdbc.username=OPENWMS
 jdbc.password=OPENWMS
 jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
