--- a/org.openwms.core/org.openwms.core.integration.file/pom.xml
+++ b/org.openwms.core/org.openwms.core.integration.file/pom.xml
@@ -35,7 +35,7 @@
     <name>${project.artifactId}</name>
     <description>Code that uses JAXB to read/write XML files.</description>
     <properties>
-        <moduleDir>../../..</moduleDir>
+        <moduleDir>../..</moduleDir>
         <openwms.configuration.version>0.2-SNAPSHOT</openwms.configuration.version>
     </properties>
     <build>
