--- a/org.openwms.core/org.openwms.core.infrastructure.hsql/pom.xml
+++ b/org.openwms.core/org.openwms.core.infrastructure.hsql/pom.xml
@@ -35,7 +35,7 @@
     <name>${project.artifactId}</name>
     <description>Contains Spring configuration to start an in-memory HSQL database and creates a suitable DataSource for test purposes.</description>
     <properties>
-        <moduleDir>../../..</moduleDir>
+        <moduleDir>../..</moduleDir>
         <openwms.configuration.version>0.2-SNAPSHOT</openwms.configuration.version>
     </properties>
     <build>
