--- a/org.openwms.core/org.openwms.core.util/pom.xml
+++ b/org.openwms.core/org.openwms.core.util/pom.xml
@@ -35,7 +35,7 @@
     <name>${project.artifactId}</name>
     <description>A project that contains utility classes, exception types, common event types that are used by all other projects.</description>
     <properties>
-        <moduleDir>../../..</moduleDir>
+        <moduleDir>../..</moduleDir>
     </properties>
     <build>
         <plugins>
