--- a/org.openwms.core/org.openwms.core.service.spring/pom.xml
+++ b/org.openwms.core/org.openwms.core.service.spring/pom.xml
@@ -35,7 +35,7 @@
     <name>${project.artifactId}</name>
     <description>Spring implementation of the service layer.</description>
     <properties>
-        <moduleDir>../..</moduleDir>
+        <moduleDir>.</moduleDir>
         <openwms.configuration.version>0.2-SNAPSHOT</openwms.configuration.version>
     </properties>
     <build>
