--- a/pom.xml
+++ b/pom.xml
@@ -773,6 +773,8 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${plugin.surefire.version}</version>
                     <configuration>
+                        <forkCount>0</forkCount>
+                        <threadCount>1</threadCount>
                         <useSystemClassLoader>true</useSystemClassLoader>
                         <skipTests>false</skipTests>
                         <trimStackTrace>true</trimStackTrace>
